[package]
name = "libtww"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.4.7", default-features = false }
gcn = { git = "https://github.com/CryZe/gcn" }
libm = { version = "0.2.1", optional = true }

[features]
math = ["libm"]
alloc = []
